--- a/source/assets/styles/recipe-add.css
+++ b/source/assets/styles/recipe-add.css
@@ -35,6 +35,11 @@ nav {
     color: #FAF9F6;
 }
 
+.flexbox {
+    margin-bottom: 70px;
+}
+
+
 .RecipeBox {
     display: flex;
     justify-content: center;
