--- a/source/assets/styles/recipe-detail.css
+++ b/source/assets/styles/recipe-detail.css
@@ -121,6 +121,7 @@ h1 {
 .bottom-buttons {
     position: relative;
     text-align: center;
+    margin-bottom: 100px;
 }
 
 .bottom-buttons > p {
