--- a/source/assets/styles/setting.css
+++ b/source/assets/styles/setting.css
@@ -35,6 +35,10 @@ nav {
     height: 50%;
 } */
 
+.settings-body {
+    margin-bottom: 70px;
+}
+
 .fontsize{
     display: flex;
     height: 60px;
@@ -78,11 +82,7 @@ nav {
 .settings-body{
     margin-bottom: 320px;
 }
-/* 
-footer{
-    position: relative;
-    bottom: -300px;
-} */
+
 
 .nav-bar {
     background-color: #F4BA26;
